--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,86 @@
-#hello {
-	color: red;
+
+#form {
+    padding-top: 10%;
+    padding-left: 5%;
 }
+#form div {
+    padding-top: 2%;
+}
+.formElements{
+    width: 100% !important;
+}
+#echo{
+    margin-right: 0;
+}
+#alignLabel{
+     display: inline-block;
+     vertical-align: middle;
+}
+.row {
+  width: 100%;
+  margin: 0 auto;
+}
+
+.labelPosition{
+    margin-top: 5% !important;
+}
+#label_frame_fin{
+    padding-left: 40% !important;
+}
+#render{
+    width: 100%;
+}
+
+/*SIDE SEARCH*/
+
+
+.sidenav {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    right: 0;
+    float: right;
+    background-color: #1d2d44;
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 60px;
+}
+
+.sidenav a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+    transition: 0.3s
+}
+
+.sidenav a:hover, .offcanvas a:focus{
+    color: #f1f1f1;
+}
+
+.closebtn {
+    position: absolute;
+    right: 25px;
+    font-size: 36px !important;
+    margin-left: 50px;
+
+}
+ #echo-result div {
+ 	word-break: break-all;
+ 	height: auto;
+ 	padding-bottom: 1%;
+ 	padding-top:1%;
+ }
+  #echo-result:hover{
+   background-color:#FF0000;
+}
+
+ #echo-namecol {
+  margin-bottom: 2%;
+  padding-top:2%;
+  font-size:14px;
+ }
+
