--- a/css/style.css
+++ b/css/style.css
@@ -74,8 +74,8 @@
  	padding-bottom: 1%;
  	padding-top:1%;
  }
-  #echo-result:hover{
-   background-color:#FF0000;
+  .jobInside:hover{
+   background-color:rgba(29, 45, 68, 0.5);
 }
 
  #echo-namecol {
