--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,8 @@
 
+html, body {
+    		height: 100%;
+    		margin: 0;
+    	}
 #form {
     padding-top: 10%;
     padding-left: 5%;
@@ -36,20 +40,19 @@
 
 .sidenav {
     height: 100%;
-    width: 0;
-    position: fixed;
-    z-index: 1;
+    /*width: 0;*/
+    position: relative;
     top: 0;
-    right: 0;
-    float: right;
+    left: 0;
+    float: left;
     background-color: #1d2d44;
-    overflow-x: hidden;
-    transition: 0.5s;
+    /*overflow-x: hidden;
+    transition: 0.5s;*/
     padding-top: 60px;
 }
 
 .sidenav a {
-    padding: 8px 8px 8px 32px;
+    padding: 8px 8px 8px 0px;
     text-decoration: none;
     font-size: 25px;
     color: #818181;
@@ -75,12 +78,17 @@
  	padding-top:1%;
  }
   .jobInside:hover{
-   background-color:rgba(29, 45, 68, 0.5);
+   background-color:rgba(77, 119, 179, 0.5);
 }
 
  #echo-namecol {
   margin-bottom: 2%;
   padding-top:2%;
-  font-size:14px;
+  font-size:16px;
+  border-bottom: 1px solid #666;
  }
 
+ #app-content-wrapper {
+ 	padding-left: 0;
+ 	height: 100%;
+ }
