--- a/css/style.css
+++ b/css/style.css
@@ -3,37 +3,7 @@ html, body {
     		height: 100%;
     		margin: 0;
     	}
-#form {
-    padding-top: 10%;
-    padding-left: 5%;
-}
-#form div {
-    padding-top: 2%;
-}
-.formElements{
-    width: 100% !important;
-}
-#echo{
-    margin-right: 0;
-}
-#alignLabel{
-     display: inline-block;
-     vertical-align: middle;
-}
-.row {
-  width: 100%;
-  margin: 0 auto;
-}
 
-.labelPosition{
-    margin-top: 5% !important;
-}
-#label_frame_fin{
-    padding-left: 40% !important;
-}
-#render{
-    width: 100%;
-}
 
 /*SIDE SEARCH*/
 
@@ -48,15 +18,15 @@ html, body {
     background-color: #1d2d44;
     /*overflow-x: hidden;
     transition: 0.5s;*/
-    padding-top: 60px;
+    padding-top: 2%;
 }
 
 .sidenav a {
-    padding: 8px 8px 8px 0px;
+    padding: 0 15% 10% 10% ;
     text-decoration: none;
-    font-size: 25px;
-    color: #818181;
+    font-size: 16px;
     display: block;
+    color: #818181;
     transition: 0.3s
 }
 
@@ -77,18 +47,26 @@ html, body {
  	padding-bottom: 1%;
  	padding-top:1%;
  }
-  .jobInside:hover{
-   background-color:rgba(77, 119, 179, 0.5);
+
+   #tbodyid tr {
+   word-break: break-all;
+}
+  #tbodyid tr:hover{
+   background-color:rgba(77, 119, 179, 0.5) !important;
 }
 
- #echo-namecol {
+ thead th{
   margin-bottom: 2%;
   padding-top:2%;
   font-size:16px;
-  border-bottom: 1px solid #666;
+  color: #1d2d44 !important;
+  font-weight: bold;
  }
 
  #app-content-wrapper {
  	padding-left: 0;
  	height: 100%;
  }
+  .selectedOption {
+    color: #f1f1f1 !important;
+  }
