--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,3 @@
-
-html, body {
-    		height: 100%;
-    		margin: 0;
-    	}
-
-
-/*SIDE SEARCH*/
-
-
 .sidenav {
     height: 100%;
     /*width: 0;*/
@@ -33,21 +23,6 @@ html, body {
 .sidenav a:hover, .offcanvas a:focus{
     color: #f1f1f1;
 }
-
-.closebtn {
-    position: absolute;
-    right: 25px;
-    font-size: 36px !important;
-    margin-left: 50px;
-
-}
- #echo-result div {
- 	word-break: break-all;
- 	height: auto;
- 	padding-bottom: 1%;
- 	padding-top:1%;
- }
-
    #tbodyid tr {
    word-break: break-all;
 }
@@ -70,3 +45,45 @@ html, body {
   .selectedOption {
     color: #f1f1f1 !important;
   }
+
+.body-head h3, .body-head span {
+  display: inline-block;
+}
+.body-head span {
+  float: right;
+  margin: 30px 0 0 40px;
+}
+.row-info {
+  margin-bottom: 10px;
+}
+.info-label, .info-text {
+  display: inline-block;
+  margin: 0;
+}
+
+.paging-nav {
+  text-align: right;
+  padding-top: 2px;
+}
+
+.paging-nav a {
+  margin: auto 1px;
+  text-decoration: none;
+  display: inline-block;
+  padding: 1px 7px;
+  background: #91b9e6;
+  color: white;
+  border-radius: 3px;
+}
+
+.paging-nav .selected-page {
+  background: #187ed5;
+  font-weight: bold;
+}
+
+@media (max-width: 386px) {
+  .body-head span {
+    float: none;
+    margin: 0;
+  }
+}
