--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,17 @@
 .sidenav {
     height: 100%;
-    /*width: 0;*/
     position: relative;
     top: 0;
     left: 0;
     float: left;
     background-color: #1d2d44;
-    /*overflow-x: hidden;
-    transition: 0.5s;*/
     padding-top: 2%;
 }
 
 .sidenav a {
-    padding: 0 15% 10% 10% ;
+  /*padding: 0 20% 10% 20% ;*/
+    text-align: center;
+    padding-top: 10%;
     text-decoration: none;
     font-size: 16px;
     display: block;
@@ -86,7 +85,50 @@
 .fa-arrow-circle-o-down{
   color: #5cb85c !important ;
 }
+#userNameFront{
+  text-align: center;
+  width: 100%;
+  background-color: #818181;
+  margin-bottom: 0;
+}
+#job-nav{
+  padding-right:  0;
+  padding-top:  0;
+  color: #f1f1f1;
+  font-size: 20px;
 
+}
+
+@media (max-width: 770px) {
+  .sidenav {
+    height: 15%;
+}
+
+.sidenav a {
+  /*padding: 0 20% 10% 20% ;*/
+    
+    padding-top: 2%;
+    
+}
+#app{
+  width: 100%;
+   margin: 0;
+}
+
+
+#app-content{
+  width: 100%;
+   margin: 0;
+   padding-right: 0; 
+}
+
+#app-content-wrapper{
+  width: 100%;
+  margin: 0;
+  padding-right: 0;
+
+}
+}
 
 @media (max-width: 386px) {
   .body-head span {
