--- a/css/style.css
+++ b/css/style.css
@@ -86,11 +86,11 @@
   background-color: #5cb85c !important ;
 }
 
-.fa-arrow-circle-down{
+.fa-archive{
   color: #5cb85c !important ;
 }
 
-.fa-arrow-circle-down:hover{
+.fa-archive:hover{
   color: #005400 !important ;
 }
 
