--- a/css/style.css
+++ b/css/style.css
@@ -115,32 +115,49 @@
 @media (max-width: 770px) {
   .sidenav {
     height: 15%;
-}
-
-.sidenav a {
-  /*padding: 0 20% 10% 20% ;*/
-    
-    padding-top: 2%;
-    
-}
-#app{
-  width: 100%;
-   margin: 0;
-}
-
-
-#app-content{
-  width: 100%;
-   margin: 0;
-   padding-right: 0; 
-}
-
-#app-content-wrapper{
-  width: 100%;
-  margin: 0;
-  padding-right: 0;
-
-}
+  }
+  .sidenav a {
+    /*padding: 0 20% 10% 20% ;*/  
+    padding-top: 2%;  
+  }
+  #app{
+    width: 100%;
+    margin: 0;
+  }
+  #app-content{
+    width: 100%;
+    margin: 0;
+    padding-right: 0; 
+  }
+  #app-content-wrapper{
+    width: 100%;
+    margin: 0;
+    padding-right: 0;
+  }
+  #job-nav {
+    /*display: none;*/
+    height: 7%;
+    margin-bottom: 10px;
+    /*padding-right:  0;
+    padding-top:  0;
+    color: #f1f1f1;
+    font-size: 20px;*/
+  }
+  #job-nav ul {
+    display: none;
+  }
+  #userNameFront {
+    display: none;
+  }
+  .jobnav-top a {
+    text-align: right;
+  }
+  .jobnav-top #closeNav {
+    display: none;
+  }
+  .fa-caret-up, .fa-caret-down {
+    padding: 0 10px;
+  }
 }
 
 @media (max-width: 386px) {
