--- a/css/style.css
+++ b/css/style.css
@@ -279,7 +279,7 @@ thead tr th {
 		padding-right: 0;
 	}
 	#job-nav {
-		height: 7%;
+		height: 45px;
 		margin-bottom: 10px;
 		position: fixed;
 		z-index: 1;
